--- a/css/components/lodging-card.css
+++ b/css/components/lodging-card.css
@@ -5,8 +5,9 @@ Card main
 */
 
 .lodging__card {
+  position: relative;
   background-color: var(--color-white);
-  outline: 5px solid var(--color-white);
+  border: 5px solid var(--color-white);
 }
 
 .lodging__card-content {
